# sunpinyin

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LGPL.LICENSE  Makefile.am  NEWS  README  README-Win32.md  README.md  SConstruct  TODO  autogen.sh  config.h.cmakein  configure.ac  sunpinyin-2.0.pc.in
data/: Makefile.am  Makefile.new  sunpinyin_logo.xpm
debian/: .gitignore  README.Debian  changelog  control  control.in  copyright  ibus-sunpinyin.install  iiimf-le-sunpinyin-chinese.install  libsunpinyin3-dev.install  libsunpinyin3.install  rules  scim-sunpinyin.install  sunpinyin-data-be.install  sunpinyin-data-le.install  watch  xsunpinyin.install  xsunpinyin.lintian-overrides  xsunpinyin.postinst  xsunpinyin.prerm
doc/: .gitignore  AuxRequire.txt  Makefile.am  README  README.in  SConscript  SLM-inst.mk.in  SLM-train.mk  SLM.mk  SLM.mk.in  genpyt.pod  getWordFreq.pod  ids2ngram.pod  mmseg.pod  rules.mk  slm.mk  slmbuild.pod  slminfo.pod  slmprune.pod  slmthread.pod  tslminfo.pod  tslmpack.pod
m4/: README  intltool.m4
man/: .gitignore  SConscript  genpyt.pod  getwordfreq.pod  idngram_merge.pod  ids2ngram.pod  mmseg.pod  slmbuild.pod  slminfo.pod  slmpack.pod  slmprune.pod  slmseg.pod  slmthread.pod  tslmendian.pod  tslminfo.pod
plugins/: cloudpinyin.py
po/: Makefile.in.in  POTFILES.in  sunpinyin.pot  sunpinyin2.pot  zh_CN.po
python/: Makefile.am  imdict.py  mmseg.py  pinyin_data.py  pinyin_info_gen.py  pyslm.pyx  pytrie.pyx  quanpin_trie_gen.py  setup.py  test.py  trie.py  utils.py
python/importer/: imdict.py  import_fcitx_userdict.py  import_fit_userdict.py  import_google_userdict.py  import_qim_userdict.py  import_qq_userdict.py  import_sogou_celldict.py  import_sogou_userdict.py  import_ziguang_userdict.py  importer.py  pinyin_data.py  trie.py
raw/: Makefile  Makefile.am  Makefile.new
src/: Makefile.am  SConscript  portability.cpp  portability.h  sunpinyin-dictgen.mk.in  sunpinyin.h
src/config/: beos.h  linux.h  mac.h  solaris.h
src/ime-core/: ic_history.cpp  ic_history.h  imi_context.cpp  imi_context.h  imi_data.cpp  imi_data.h  imi_defines.h  imi_funcobjs.cpp  imi_funcobjs.h  imi_glibHandler.h  imi_gtkHandler.h  imi_keys.h  imi_option_event.cpp  imi_option_event.h  imi_option_keys.h  imi_options.cpp  imi_options.h  imi_plugin.cpp  imi_plugin.h  imi_uiobjects.cpp  imi_uiobjects.h  imi_view.cpp  imi_view.h  imi_view_classic.cpp  imi_view_classic.h  imi_winHandler.cpp  imi_winHandler.h  lattice_states.cpp  lattice_states.h  userdict.cpp  userdict.h  utils.h
src/lexicon/: genPYT.cpp  genpyt.cpp  pytrie.cpp  pytrie.h  pytrie_gen.cpp  pytrie_gen.h  trie_writer.cpp  trie_writer.h
src/pinyin/: datrie.h  datrie_impl.h  hunpin_seg.cpp  hunpin_seg.h  pinyin_data.cpp  pinyin_data.h  pinyin_seg.cpp  pinyin_seg.h  quanpin_trie.h  segmentor.h  shuangpin_data.cpp  shuangpin_data.h  shuangpin_seg.cpp  shuangpin_seg.h  syllable.h
src/slm/: sim_dict.cpp  sim_dict.h  sim_fmerge.h  sim_sen.cpp  sim_sen.h  sim_slm.cpp  sim_slm.h  sim_slmbuilder.cpp  sim_slmbuilder.h  slm.cpp  slm.h
swap/: README
wrapper/: Makefile.am
wrapper/gtk_standalone/: Makefile.am  SConstruct  imi_gtkwin.cpp  imi_gtkwin.h  sunpinyin.cpp
wrapper/ibus/: .gitignore  CMakeLists.txt  Makefile.am  README  SConstruct
wrapper/ibus/cmake/modules/: FindSunPinyin.cmake  FindiBus.cmake  Gettext.cmake  LibFindMacros.cmake  Paths.cmake
wrapper/ibus/data/: CMakeLists.txt  Makefile.am  sunpinyin.xml.in
wrapper/ibus/debian/: changelog  control.in  rules
wrapper/ibus/po/: .gitignore  CMakeLists.txt  ibus-sunpinyin.po  zh_CN.po
wrapper/ibus/setup/: CMakeLists.txt  Makefile.am  config.py.in  ibus-setup-sunpinyin.in  main.py  setup.glade  setup.xml
wrapper/ibus/src/: CMakeLists.txt  Makefile.am  debug.cpp  debug.h  engine.cpp  engine.h  engine_impl.cpp  engine_impl.h  ibus_common.h  ibus_compability.cpp  ibus_compability.h  ibus_portable.cpp  ibus_portable.h  imi_ibus_win.cpp  imi_ibus_win.h  main.cpp  pointer.h  sunpinyin.xml  sunpinyin.xml.in  sunpinyin.xml.in.in  sunpinyin_config.cpp  sunpinyin_config.h  sunpinyin_config_keys.h  sunpinyin_engine.cpp  sunpinyin_engine.h  sunpinyin_engine_proxy.cpp  sunpinyin_engine_proxy.h  sunpinyin_lookup_table.cpp  sunpinyin_lookup_table.h  sunpinyin_property.cpp  sunpinyin_property.h
wrapper/macos/: .gitignore  CandidateWindow.h  CandidateWindow.m  Info.plist  Makefile  README.md  SunPinyin.icns  SunPinyin.tiff  SunPinyinApplicationDelegate.h  SunPinyinApplicationDelegate.mm  SunPinyinInputController.h  SunPinyinInputController.mm  imi_imkitwin.h  imi_imkitwin.mm  imi_session_wrapper.h  imi_session_wrapper.mm  libtool  macos_keycode.h  macos_keycode.mm  (+2 more)
wrapper/scim/: COPYING  Makefile.am  README  SConstruct  imi_scimwin.cpp  imi_scimwin.h  sunpinyin_imengine.cpp  sunpinyin_imengine.h  sunpinyin_imengine_config_keys.h  sunpinyin_keycode.h  sunpinyin_lookup_table.h  sunpinyin_utils.cpp  sunpinyin_utils.h
wrapper/scim/src/: imi_scimwin.cpp  imi_scimwin.h  sunpinyin_imengine.cpp  sunpinyin_imengine.h  sunpinyin_imengine_config_keys.h  sunpinyin_imengine_setup.cpp  sunpinyin_keycode.h  sunpinyin_lookup_table.cpp  sunpinyin_lookup_table.h  sunpinyin_private.h  sunpinyin_utils.cpp  sunpinyin_utils.h
wrapper/xim/: LGPL.LICENSE  Makefile.am  README  SConstruct  common.h  ic.c  ic.cc  ic.h  ic_gtk.c  ic_skin.c  main.c  preferences.c  settings.c  settings.h  skin.c  skin.h  sunpinyin_preedit.cc  sunpinyin_preedit_gtk.cc  sunpinyin_preedit_gtk.h  sunpinyin_preedit_skin.cc  sunpinyin_preedit_ui.h  ui.c  ui.h  xim.c  xim.h  xim_trigger.c  xmisc.c  xmisc.h
wrapper/xim/IMdkit/: FrameMgr.c  FrameMgr.h  IMConn.c  IMMethod.c  IMValues.c  IMdkit.h  SConscript  Xi18n.h  Xi18nX.h  XimFunc.h  XimProto.h  cscope.out  i18nAttr.c  i18nClbk.c  i18nIMProto.c  i18nIc.c  i18nMethod.c  i18nPtHdr.c  i18nUtil.c  i18nX.c
wrapper/xim/data/: settings_ui.xml  xim_config_default
wrapper/xim/data/skins/modern/: info
wrapper/xim/debian/: changelog  control.in  rules  xsunpinyin.install  xsunpinyin.postinst  xsunpinyin.prerm
wrapper/xim/im-switch/: xsunpinyin
(+77 files in other folders)
